# satymathbot

./: .buildspec.yml  .dockerignore  .gitignore  Cargo.toml  Earthfile  Makefile  README.md  docker-compose.yml  go.mod  renovate.json
.github/workflows/: ci.yml  codebuild.yml  go.yml  test.yml
app/: Cargo.toml  Dockerfile  Earthfile  dev.ron  entry.sh  prod.ron  satymathbot.ron
app/ci/: prepare_cache.sh  upload_cache.sh
app/satysfi/: empty.satyh
app/src/: lib.rs  main.rs
app/templates/: saty.jinja
ci/: build_and_push.sh
cmd/satymathbot/: .gitignore  main.go
docker/: Dockerfile
docker-compose/: core-services.libsonnet  core.jsonnet  core.libsonnet  metrics.jsonnet  validate.jsonnet
docker-compose/app-mock/: Dockerfile
docker-compose/app-mock/files/etc/nginx/: nginx.conf
docker-compose/app-mock/files/nginx/: index.html
docker-compose/metrics/prometheus/: Dockerfile
docker-compose/metrics/prometheus/files/etc/prometheus/: prometheus.yml
docker/prod/: Dockerfile
dockerfile/app/: Dockerfile
dockerfile/envoy/: Dockerfile
dockerfile/envoy/files/etc/envoy/: envoy.yml
dockerfile/nginx/: Dockerfile
dockerfile/nginx/files/etc/nginx/: nginx.conf
dockerfile/prod/: Dockerfile
dockerfile/prometheus/: Dockerfile
dockerfile/prometheus/files/etc/prometheus/: prometheus.yml
dockerfile/rproxy/files/etc/nginx/: nginx.conf
envoy/: Dockerfile  Earthfile  envoy.libsonnet
envoy/files/etc/envoy/: envoy.yml
nginx/: Dockerfile
nginx/files/etc/nginx/: nginx.conf
prometheus/: Dockerfile  Earthfile  prometheus.yml
promtail/: Dockerfile  Earthfile  config.yml
satysfi/: Dockerfile  empty.satyh
src/: lib.rs  main.rs
templates/: saty.jinja
terraform/: .tflint.hcl  Makefile  alb.tf  buildspec.yml  codebuild.tf  definition.jsonnet  ecr.tf  ecs.tf  main.tf  prometheus.tf  route53.tf  vpc.tf
web/: .earthlyignore  .eslintrc.cjs  .prettierignore  Dockerfile  Earthfile  forcefulshutdown.mjs  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js
web/src/: app.css  app.d.ts  app.html
web/src/routes/: +layout.svelte  +page.svelte  __layout.svelte  index.svelte
