[package]
edition = "2021"
name = "satymathbot"
version = "0.1.0"
description = "A simple satysfi mathematics rendering server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.2"
clap = {version = "3.0.0-rc.4", features = ["derive"]}
image = "0.23.14"
tokio = {version = "1.14.0", features = ["macros", "fs", "rt-multi-thread"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
