[package]
description = "A simple satysfi mathematics rendering server"
edition = "2021"
name = "satymathbot"
version = "0.1.0"

[[bin]]
name = "satymathbot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
askama = "0.12.0"
axum = "0.6.20"
base64 = "0.21.2"
clap = {version = "4.3.21", features = ["derive"]}
futures = "0.3.28"
hyper = {version = "0.14.27", default-features = false}
hyperlocal = "0.8.0"
image = {version = "0.24.7", default-features = false, features = ["png", "jpeg"]}
moka = {version="0.11.2", features=["future"]}
nom = "7.1.3"
ron = "0.8.0"
serde = {version = "1.0.183", features = ["derive"]}
tokio = {version = "1.31.0", features = ["macros", "fs", "process", "io-util", "rt-multi-thread", "signal"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", default-features = false, features = ["fmt"]}
