[package]
description = "A simple satysfi mathematics rendering server"
edition = "2021"
name = "satymathbot"
version = "0.1.0"

[[bin]]
name = "satymathbot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
axum = "0.6.20"
base64 = "0.21.7"
clap = {version = "4.5.4", features = ["derive"]}
futures = "0.3.30"
hyper = {version = "0.14.28", default-features = false}
hyperlocal = "0.8.0"
image = {version = "0.25.1", default-features = false, features = ["png", "jpeg"]}
moka = {version="0.12.6", features=["future"]}
nom = "7.1.3"
ron = "0.8.1"
serde = {version = "1.0.198", features = ["derive"]}
tokio = {version = "1.37.0", features = ["macros", "fs", "process", "io-util", "rt-multi-thread", "signal"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", default-features = false, features = ["fmt"]}
